--- a/ContainerPlanPredictionApp/Shared/NavMenu.razor
+++ b/ContainerPlanPredictionApp/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="boxorder">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Box Order
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Vessel Planning
             </NavLink>
         </li>
     </ul>
